# Klara-s_Sun

./: CNAME  HANDOFF_CHECKLIST.md  IP_LOG.md  KLARA_SYSTEM_CONFIRMATION_REPORT.md  README.md  TABLEAU_EMBED_README.txt  UPLOAD_DASHBOARDS_TO_GITHUB.md  index.html  klara-os-narrative.html  main.py
cgidatahackathon/: .env.example  .gitignore  Dockerfile  PROMPT_COLLECT_NS_LINKS.md  README.md  main.py  pyproject.toml  requirements.txt
cgidatahackathon/docs/: BACKEND_FRONTEND_CONNECTIVITY_AUDIT.md  CARE_SEQUENCE_PROPOSAL.md  CONNECTION_STATUS_IMPLEMENTATION.md  DEPENDENCY_MAP.md  EXECUTIVE_COMPLIANCE_CHECK_UI_ROUTING_AUDIT.md  HEALTHCARE_GRAPH_FUTURE_HOOKS.md  INTAKE_UI_ARCHITECTURE_ANALYSIS.md  Klara_system_architecture.md  SYSTEM_STATUS_BAR_PATCH.md  optimization_output_schema.json
cgidatahackathon/klara_core/: agentic_rag.py  demand_intelligence.py  eligibility_engine.py  healthcare_graph.py  optimization.py  policy_engine.py  risk_engine.py  routing_engine.py  scenario_engine.py  summary_builder.py  symptom_parser.py  system_metrics.py  telemetry.py  transport_optimizer.py
cgidatahackathon/klara_data/: ns_healthcare_nodes.json  schemas.py
cgidatahackathon/scripts/: run_compliance.bat  run_compliance.ps1  run_trial.bat
cgidatahackathon/static/: admin.css  admin.html  admin.js  clinician_dashboard.css  clinician_dashboard.html  clinician_dashboard.js  clinician_gate.css  clinician_gate.html  clinician_gate.js  command_center.css  command_center.html  command_center.js  control_room.css  control_room.html  control_room.js  index.html  map.js  user.css  user.js
(+25 files in other folders)
