[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klara-os"
version = "1.0.0"
authors = [
  { name="CGI Team" }
]
description = "A conversational healthcare navigation assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PuLP>=2.7.0"
]

[tool.setuptools]
packages = [
    "klara_core",
    "klara_data",
    "scripts"
]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["static/*", "static/**/*", "*.md"]
